<resources>
    <string name="app_name">LogIn SignUp Page</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN IN</string>
</resources>